# kamae-rs

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
crates/review-probe/: Cargo.toml
crates/review-probe/src/: lib.rs  main.rs  output.rs  probe.rs  scan.rs  types.rs  visitor.rs
crates/review-probe/tests/: taxi_request.rs
rules/: README.md
rules/defaults/: crate-detection.md
scripts/: review_probe.py  validate_package.py
skills/kamae-rs/: SKILL.md
skills/kamae-rs-review/: SKILL.md
skills/kamae-rs-review/agents/: openai.yaml
skills/kamae-rs-review/checklist/: aggregate-transactions.md  application-wiring.md  boundary.md  ci-setup.md  dev-environment.md  domain-macros.md  domain-modeling.md  error-handling.md  fmt-lint.md  logging-metrics.md  mutation-testing.md  persistence-events.md  pii-protection.md  property-based-tests.md  rustdoc.md  service-boundaries.md  state-transitions.md  stream-continuous-queries.md  tests.md  unsafe-boundaries.md
skills/kamae-rs/agents/: openai.yaml
skills/kamae-rs/assets/templates/: Cargo.toml  github-ci-mutants.yml  github-ci-skill-package.yml  github-ci.yml  gitignore  mutants.toml  validate_package.py
skills/kamae-rs/examples/: Cargo.toml  taxi-request.rs
skills/kamae-rs/examples/tests/: compile_fail.rs
skills/kamae-rs/examples/tests/compile_fail/: en_route_is_not_waiting.rs  en_route_is_not_waiting.stderr
skills/kamae-rs/references/: adoption.md  aggregate-transactions.md  application-wiring.md  boundary-defense.md  (+21 more)
(+9 files in other folders)
