[package]
name = "kamae-review-probe"
version = "0.1.0"
edition = "2021"
publish = false
description = "Collect kamae-rs review leads from Rust source using AST analysis"

[[bin]]
name = "review-probe"
path = "src/main.rs"

[lib]
name = "kamae_review_probe"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit", "extra-traits"] }

[dev-dependencies]
serde_json = "1"
